--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,22 +16,25 @@ div {
 }
 
 .gameOver {
-    background-color: red;
     position: absolute;
-    animation-name: example;
+    height: 100vh;
+    width: 100vw;
+    margin: auto;
+    background-color: black;
+    font-family: '8BIT WONDER', sans-serif;
     animation-duration: 1s;
+    animation-name: example;
     animation-iteration-count: infinite;
-    animation-delay: calc(.1s * var(--i));
-  }
+}
   
-  @keyframes example {
+@keyframes example {
     0%,40%,100% {
         transform: translateY(0)
-      }
-      20% {
+        }
+        20% {
         transform: translateY(-20px)
-      }
-  }
+    }
+}
 
 .instructionsContainer {
     flex-direction: column;
@@ -64,6 +67,14 @@ div {
 
 .cellContainer {
     flex: 1;
+    animation-iteration-count: infinite;
+    animation-duration: 4s;
+}
+
+@keyframes cellAnimation {
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .empty {
