--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,11 +20,14 @@ div {
     height: 100vh;
     width: 100vw;
     margin: auto;
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0.6);
     font-family: '8BIT WONDER', sans-serif;
     animation-duration: 1s;
     animation-name: example;
     animation-iteration-count: infinite;
+    align-items: center;
+    justify-content: center;
+    font-size: 10vh;
 }
   
 @keyframes example {
