--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,21 @@ div {
     gap: 60px;
 }
 
+.pause {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.6);
+    font-family: '8BIT WONDER', sans-serif;
+    animation-duration: 1s;
+    animation-name: example;
+    animation-iteration-count: infinite;
+    align-items: center;
+    justify-content: center;
+    font-size: 10vh;
+}
+
 .gameOver {
     position: absolute;
     height: 100vh;
