added ui containers to index.html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,14 +70,14 @@ div {
     justify-content: space-between;
 }
 
-.playerContainer {
+.uiContainer {
     flex-direction: column;
     margin-top: 3vh;
-    font-size: x-large;
+    font-size: large;
     font-family: Arial, Helvetica, sans-serif;
     height: fit-content;
     padding: 5px;
-
+    
     border-width: 3px;
     border-style: solid;
     border-color: grey;
