--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,29 +106,29 @@ div {
 }
 
 .iBlock {
-    background-color: blue;
+    background-color: #00ffff;
 }
 
 .jBlock {
-    background-color: red;
+    background-color: #0000ff;
 }
 
 .lBlock {
-    background-color: green;
+    background-color: #ffa500;
 }
 
 .oBlock {
-    background-color: yellow;
+    background-color: #ffff00;
 }
 
 .sBlock {
-    background-color: purple;
+    background-color: #00ff00;
 }
 
 .tBlock {
-    background-color: orange;
+    background-color: #800080;
 }
 
 .zBlock {
-    background-color: brown;
+    background-color: #ff0000;
 }
