--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,13 +12,19 @@ div {
 }
 
 .image-container {
-    left: 1em;
+    position: relative;
+    left: -50px;
     width: 200px;
     height: 200px;
     flex-direction: column;
     margin-top: 3vh;
     height: fit-content;
     padding: 5px;
+}
+
+#tetris-logo {
+    position: relative;
+    left: -30px;
 }
 
 #main-container {
